feat(statement): add append-only ledger with credit, debit, and reversal (#12)
* feat(statement): add append-only ledger with credit, debit, and reversal

* feat(statements): corrigir erros apontados pelo linter

* feat(statements): implementar teste E2E

* feat(statements): atualizar convenção sobre mocks

* fix(statements): align Swagger annotations with actual Gin route params

* fix(statements): raw DB errors were being returned without wrapping

* fix(statements): remove inutilized error

* fix(statements): change order of ownership and statement validations to maintain consistency

* fix(statements): define const to use instead of literal string

* fix(statements): define a new err variable instead of reusing it

* fix(statements): use sql NOW() for better accuracy

* fix(statements): use "given ... when ... then ..." pattern on tests

* fix(statements): fix golangci again

* fix(statements): change the weak validation to a stronger assert

* feature(statements): add commit error test

* feature(statements): remove unused functions

* feature(statements): add balanceAfter return on repo create function

* feature(statements): add tests to statement handler

* feature(statements): add more context to testing patterns

* feature(statements): update swagger doc
